@@ -21,6 +21,8 @@ Post-v3.1.0
      * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
        with the --hw-rawio-access command line option.  This allows the
        process extra privileges when mapping physical interconnect memory.
+   - SRv6 Tunnel Protocol
+     * Added support for userspace datapath (only).
 
 
 v3.1.0 - 16 Feb 2023
